2010-09-25  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_fake.c: 
	Removed set/unset of verbose mode

2010-09-24  Henrik Sandklef  <hesa@sandklef.com>

	* NEWS: 
        Notes from ChangeLog turned into (not yet properly) commented notes

	* libxnee/include/libxnee/xnee_fake.h: 
	Changed fake key fun to macro
	Added fun to fake xi key

	* libxnee/src/xnee_fake.c: 
	Added support for replaying XI key event

	* libxnee/src/xnee_expr.c (xnee_expression_handle_prim_sub): 
	Storing of time altered to work with xi and forced core replay
	Discard xi events if forced core replay

	* libxnee/src/xnee_fake.c (xnee_fake_button_event_impl): 
	Storing last motion event's X and Y coords for use in coming calls
	to xi fake button

	* libxnee/src/xnee_xinput.c (xnee_get_xinput_device): 
	Using fake display when listing and setting up xi devices

	* libxnee/test/libtest.c: 
	Added (c) notice

	* cnee/include/parse.h: 
	* cnee/src/parse.c: 
	Added options to handle:
	forced core replay
	replay backend

	* libxnee/src/print.c: 
	Basic functionality of printing xi events for humans added

	* libxnee/src/xnee_error.c: 
	Added: XNEE_XINPUT_EXTENSION_FAILURE, XNEE_REPLAY_BACKEND_FAILURE 

	* libxnee/src/xnee_fake.c: 
	Added support for xi buttton
	Moved calc of time to sleep to separate fun
	(xnee_replay_event_handler_sleep_amt)
	Added code to find replay session's device id
	(only  rudimentary support, based on # instead of name)

	* libxnee/src/xnee_record.c: 
	Removed "#" in front of core event printout
	Temp. disabling check for screen 

	* libxnee/src/xnee_replay.c: 
	Restructured duplicate code (new static fun
	xnee_replay_update_dev_ctr)
	Added support for xi buttons

	* libxnee/src/xnee_session.c: 
	Added call to xi init and to set replay backend

	* libxnee/src/xnee_setget.c
	(xnee_unset_forced_core_device_events): 
	Added funs to (un)set forced code device replay

	* libxnee/src/xnee_xinput.c: 
	Human printout of xi events